[tool.poetry]
name = "network-speed"
version = "0.1.0"
description = ""
authors = ["Ivan Sakharov <vingving648@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytz = "^2024.1"
psutil = "^6.0.0"
redis = "^5.0.7"
python-dotenv = "^1.0.1"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
